# napari-software-development-workshop

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  plugin_readme.md  pyproject.toml  setup.cfg  template.md  tox.ini
.github/workflows/: build_docs.yml  deploy_to_pypi.yml  test.yml
.napari-hub/: DESCRIPTION.md
docs/: index.md  reference.md
recipes/napari-workshop-plugin/: meta.yaml
src/napari_workshop_plugin/: __init__.py  _reader.py  _sample_data.py  _widget.py  napari.yaml
src/napari_workshop_plugin/_tests/: test_blur_and_gray.py  test_display_layer.py  test_initial_segment.py  test_reader.py  test_sample_data.py  test_smooth_labels.py  test_widget.py  test_writer.py
